MDL-74091 core_question: 'table-responsive' qtable avoids overlap.

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -900,6 +900,7 @@ table.quizreviewsummary td.cell {
 table#categoryquestions {
     width: 100%;
     table-layout: fixed;
+    overflow-x: visible;
 }
 
 #categoryquestions .iconcol {
